Ispravio pravopisne greške.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <img src="./img/ponuda_3.png" class="card-img-top" style="border: none;">
                             <div class="card-body" style="color: #032a69">
                                 <h4 class="card-title text-center">👟 Jedan kalup – više modela patika</h5>
-                                <p class="card-text text-center fs-5">Izaberite bilo koji <i><b>EasyFit</b></i> dizajn, bez kompromisa po pitanju udobnosti. Imaćete osećaj se kao da nosite svoj omiljeni par patika.</p>
+                                <p class="card-text text-center fs-5">Izaberite bilo koji <i><b>EasyFit</b></i> dizajn, bez kompromisa po pitanju udobnosti. Imaćete osećaj kao da nosite svoj omiljeni par patika.</p>
                             </div>
                         </div>
                     </div>
@@ -163,8 +163,8 @@
                         </p>
                     </div>
                     <div class="text-center fs-3 mx-3" style="color: red;">
-                        <p id="vazno">Sajt je deo projekta planiranog Nastavnog plana i programa za predmet Preduzetništvo u IT, prve godine master strukovnih studija na Visokoj školi strukovnih studija za informacione tehnologije (ITS).
-Kao takav, predstavlja imaginarni biznis u prethodno navedenu svrhu.</p>
+                        <p id="vazno">Sajt je deo projekta planiran Nastavnim planom i programom studija za predmet Preduzetništvo u IT, prve godine master strukovnih studija na Visokoj školi strukovnih studija za informacione tehnologije (ITS).
+Kao takav, predstavlja imaginarni biznis i ne služi ostvarivanju profita.</p>
                     </div>
                 </div>
                 <img src="./img/footer_image.png" class="w-100"/>
